src/core-crm/objects/Program_Offering__c/Program_Offering__c.object-meta.xml
<CustomObject>
    <label>Program Offering</label>
    <nameField>
        <label>Program Offering ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>