src/core-crm/objects/Program_Offering__c/fields/Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats__c</fullName>
    <formula>hed_Capacity__c - Total_Course_Connections__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>