src/core-crm/objects/Program_Offering__c/fields/Checkout_Cart_Items_Count__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Cart_Items_Count__c</fullName>
    <label>Checkout Items Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>