src/core-crm/objects/Program_Offering__c/fields/Develop_Topic_Insights__c.field-meta.xml
<CustomField>
    <fullName>Develop_Topic_Insights__c</fullName>
    <inlineHelpText>The course has helped me develop useful new insights about this topic.</inlineHelpText>
    <label>Develop Topic Insights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>