src/core-crm/objects/Program_Offering__c/fields/Evaluation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Summary__c</fullName>
    <inlineHelpText>Enter evaluation summary</inlineHelpText>
    <label>Evaluation Summary</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>