src/core-crm/objects/Program_Offering__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
            <value>
                <fullName>Face-to-Face Blended</fullName>
            </value>
            <value>
                <fullName>Online Blended</fullName>
            </value>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Online Self-Paced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>