src/core-crm/objects/Program_Offering__c/fields/Facilities_Catering__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Catering__c</fullName>
    <inlineHelpText>The venue, catering and facilities were satisfactory.</inlineHelpText>
    <label>Facilities / Catering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>