src/core-crm/objects/Program_Offering__c/fields/hed_Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>hed_Program_Plan__c</fullName>
    <description>Programs offered in a set structure for a particular cohort of learner</description>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Program Offering</relationshipLabel>
    <relationshipName>Program_Offering</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>