src/core-crm/objects/Program_Offering__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will be used to deactivate Offering.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>