src/core-crm/objects/Program_Offering__c/fields/Peer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Peer_Engagement__c</fullName>
    <inlineHelpText>The course provided me with opportunities to connect (or “interact and learn from”) with other participants.</inlineHelpText>
    <label>Peer Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>