src/core-crm/objects/Program_Offering__c/fields/Real_World_Learning_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Real_World_Learning_Opportunities__c</fullName>
    <inlineHelpText>This course provided me with relevant, real-world learning opportunities.</inlineHelpText>
    <label>Real-World Learning Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>