src/core-crm/objects/Program_Offering__c/fields/Total_Course_Connections__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Connections__c</fullName>
    <description>This is the total number of Course Connections where status != Cancelled.</description>
    <label>Total Course Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>