src/core-crm/objects/Program_Offering__c/validationRules/End_Date_Not_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <description>End Date should be equal to or greater than Start Date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should be equal to or greater than Start Date</errorMessage>
</ValidationRule>