src/core-crm/objects/Program_Offering__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>hed_Program_Plan__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>